// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <ProductTitle /> Debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Coffee mug - card sin imagen
  </span>
</div>
`;

exports[`Pruebas en <ProductTitle /> Debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom product
</span>
`;
